<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSplashBackground"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorSplashBackground"
        android:elevation="0dp">

        <ImageView
            android:padding="@dimen/big_margin"
            android:src="@drawable/left_arrow"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:background="@drawable/skin_button_overlay"
            android:onClick="onBackClick"/>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:layout_constraintBottom_toTopOf="@+id/bottom_text">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/big_margin">
            <ImageView
                android:id="@+id/splash_icon"
                android:padding="@dimen/big_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/app_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/splash_icon"
                android:layout_marginTop="@dimen/big_margin"
                android:gravity="center"
                android:textSize="@dimen/form_text_size"
                android:text="@string/text_login_header"/>

            <EditText
                android:id="@+id/input_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/splash_icon"
                android:layout_marginTop="@dimen/big_margin"
                android:textSize="@dimen/form_text_size"
                android:hint="@string/hint_user_name"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:background="@drawable/skin_text_input"
                android:padding="@dimen/basic_margin"/>

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/splash_icon"
                android:layout_marginTop="@dimen/big_margin"
                android:textSize="@dimen/form_text_size"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@drawable/skin_text_input"
                android:padding="@dimen/basic_margin"/>


            <Button
                android:onClick="onLoginClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/splash_icon"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:textSize="@dimen/form_text_size"
                android:text="@string/text_login"
                android:textColor="@color/colorAccent"
                android:background="@drawable/skin_button_login"/>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/bottom_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/basic_margin"
        android:gravity="center"
        android:textSize="@dimen/splash_copyright_size"
        android:text="@string/text_app_copyright"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loading_layer"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorSemiTransparent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>